<resources>
    <string name="app_name">Connect 4</string>
    <string name="start_text_btn">НАЧАТЬ</string>
    <string name="create_by_kuznikov">Create by Kuznikov</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_btn_one_player">1 игрок</string>
    <string name="text_btn_two_players">2 игрока</string>
    <string name="text_btn_network_game">Игра по сети</string>
    <string name="text_player">Игрок</string>
    <string name="text_cpu">CPU</string>
    <string name="txt_registr">Регистрация/Вход в аккаунт</string>
    <string name="txt_register">Регистрация</string>
    <string name="txt_enter">Вход</string>
    <string name="login">Логин</string>
    <string name="password">Пароль</string>
    <string name="title_settings">Настройки</string>
    <string name="title_stats">Статистика</string>
    <string name="txt_title_color">Цвет:</string>
    <string name="txt_title_timer">Таймер:</string>
    <string name="txt_title_mode">Режим:</string>
    <string name="txt_game_easy">Простой</string>
    <string name="txt_mode_hard">Сложный</string>
    <string name="txt_time_15">15</string>
    <string name="txt_time_inf">∞</string>
    <string name="txt_mode_one_player">Режим 1 игрок:</string>
    <string name="txt_win_stats">Побед:</string>
    <string name="txt_lose_stats">Проигрышей:</string>
    <string name="txt_win_proc">Процент победы:</string>
    <string name="txt_player_one">Игрок 1</string>
    <string name="txt_player_two">Игрок 2</string>
</resources>