<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/shape_gradient"
    tools:context=".views.AuthFragment">


    <TextView
        android:id="@+id/name_connect_four"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="36sp"
        android:text="@string/app_name"
        android:letterSpacing="0.1"
        android:textColor="@color/semi_white"
        android:fontFamily="@font/montserrat_bold"
        android:layout_marginTop="130dp"
        android:layout_marginStart="68dp"
        android:layout_marginEnd="69dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:shadowDx="0"
        android:shadowDy="4"
        android:shadowRadius="4"
        android:shadowColor="@color/hide_black"/>

    <TextView
        android:id="@+id/start_text_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/txt_registr"
        android:textColor="@color/semi_white"
        android:fontFamily="@font/montserrat_bold"
        android:layout_marginTop="260dp"
        android:layout_marginStart="72dp"
        android:layout_marginEnd="72dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <EditText
        android:textColor="@color/black"
        android:background="@drawable/edit_input_auth"
        android:id="@+id/txt_auth_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login"
        android:fontFamily="@font/montserrat_semibold"
        android:textSize="20dp"
        android:paddingLeft="5dp"
        android:layout_marginTop="300dp"
        android:layout_marginStart="72dp"
        android:layout_marginEnd="72dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:textColor="@color/black"
        android:background="@drawable/edit_input_auth"
        android:id="@+id/txt_auth_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_semibold"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:paddingLeft="5dp"
        android:textSize="20dp"
        android:layout_marginTop="350dp"
        android:layout_marginStart="72dp"
        android:layout_marginEnd="72dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:textColor="@color/semi_white"
        android:backgroundTint="@color/blue_el"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="200dp"
        android:layout_marginStart="72dp"
        android:layout_marginEnd="72dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/txt_register"
        android:id="@+id/btn_register"/>

    <Button
        android:textColor="@color/semi_white"
        android:backgroundTint="@color/blue_el"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="250dp"
        android:layout_marginStart="72dp"
        android:layout_marginEnd="72dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/txt_enter"
        android:id="@+id/btn_login"/>

    <TextView
        android:id="@+id/create_by_kuznikov"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_by_kuznikov"
        android:textSize="16sp"
        android:letterSpacing="0.1"
        android:textColor="@color/hide_red"
        android:fontFamily="@font/montserrat_bold"
        android:layout_marginTop="700dp"
        android:layout_marginBottom="2dp"
        android:layout_marginStart="86dp"
        android:layout_marginEnd="86dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:shadowDx="0"
        android:shadowDy="4"
        android:shadowRadius="4"
        android:shadowColor="@color/hide_black"/>
</androidx.constraintlayout.widget.ConstraintLayout>