<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/shape_gradient"
    tools:context=".screens.StartFragment">


    <ImageView
        android:id="@+id/btn_ready"
        android:layout_width="328dp"
        android:layout_height="334dp"
        android:scaleType="centerCrop"
        android:src="@drawable/btn_ready"
        android:layout_marginTop="160dp"
        android:layout_marginBottom="152dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/name_connect_four"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="36sp"
        android:text="@string/app_name"
        android:letterSpacing="0.1"
        android:textColor="@color/semi_white"
        android:fontFamily="@font/montserrat_bold"
        android:layout_marginTop="84dp"
        android:layout_marginBottom="512dp"
        android:layout_marginStart="68dp"
        android:layout_marginEnd="69dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:shadowDx="0"
        android:shadowDy="4"
        android:shadowRadius="4"
        android:shadowColor="@color/hide_black"/>

    <TextView
        android:id="@+id/start_text_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="48sp"
        android:text="@string/start_text_btn"
        android:letterSpacing="0.1"
        android:textColor="@color/semi_white"
        android:fontFamily="@font/montserrat_bold"
        android:layout_marginTop="295dp"
        android:layout_marginBottom="288dp"
        android:layout_marginStart="61dp"
        android:layout_marginEnd="61dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/create_by_kuznikov"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_by_kuznikov"
        android:textSize="16sp"
        android:letterSpacing="0.1"
        android:textColor="@color/hide_red"
        android:fontFamily="@font/montserrat_bold"
        android:layout_marginTop="700dp"
        android:layout_marginBottom="2dp"
        android:layout_marginStart="86dp"
        android:layout_marginEnd="86dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:shadowDx="0"
        android:shadowDy="4"
        android:shadowRadius="4"
        android:shadowColor="@color/hide_black"/>
</androidx.constraintlayout.widget.ConstraintLayout>