<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/shape_gradient"
    tools:context=".views.SettingsFragment">

    <ImageView
        android:id="@+id/img_background_coin"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/img_background_coin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/name_connect_four"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="36sp"
        android:text="@string/title_settings"
        android:letterSpacing="0.1"
        android:textColor="@color/semi_white"
        android:fontFamily="@font/montserrat_bold"
        android:layout_marginTop="84dp"
        android:layout_marginBottom="512dp"
        android:layout_marginStart="68dp"
        android:layout_marginEnd="69dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:shadowDx="0"
        android:shadowDy="4"
        android:shadowRadius="4"
        android:shadowColor="@color/hide_black"/>




    <TextView
        android:id="@+id/txt_title_color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="217dp"
        android:layout_marginBottom="401dp"
        android:layout_marginStart="27dp"
        android:layout_marginEnd="286dp"
        android:fontFamily="@font/montserrat_semibold"
        android:shadowColor="@color/hide_black"
        android:shadowDx="1"
        android:shadowDy="6"
        android:shadowRadius="4"
        android:text="@string/txt_title_color"
        android:textColor="@color/semi_white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/txt_title_timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="273dp"
        android:layout_marginBottom="345dp"
        android:layout_marginStart="14dp"
        android:layout_marginEnd="273dp"
        android:fontFamily="@font/montserrat_semibold"
        android:shadowColor="@color/hide_black"
        android:shadowDx="1"
        android:shadowDy="6"
        android:shadowRadius="4"
        android:text="@string/txt_title_timer"
        android:textColor="@color/semi_white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/txt_title_mod"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="329dp"
        android:layout_marginBottom="289dp"
        android:layout_marginStart="17dp"
        android:layout_marginEnd="276dp"
        android:fontFamily="@font/montserrat_semibold"
        android:shadowColor="@color/hide_black"
        android:shadowDx="1"
        android:shadowDy="6"
        android:shadowRadius="4"
        android:text="@string/txt_title_mode"
        android:textColor="@color/semi_white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:id="@+id/game_red_coin"
        android:layout_width="29dp"
        android:layout_height="29dp"
        android:layout_marginTop="217dp"
        android:layout_marginBottom="401dp"
        android:layout_marginStart="104dp"
        android:layout_marginEnd="192dp"
        android:scaleType="centerCrop"
        android:src="@drawable/game_red_coin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:id="@+id/game_blue_coin"
        android:layout_width="29dp"
        android:layout_height="29dp"
        android:layout_marginTop="217dp"
        android:layout_marginBottom="401dp"
        android:layout_marginStart="300dp"
        android:layout_marginEnd="35dp"
        android:scaleType="centerCrop"
        android:src="@drawable/game_blue_coin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/txt_time_30"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="273dp"
        android:layout_marginBottom="345dp"
        android:layout_marginStart="104dp"
        android:layout_marginEnd="192dp"
        android:fontFamily="@font/montserrat_semibold"
        android:shadowColor="@color/hide_black"
        android:shadowDx="1"
        android:shadowDy="6"
        android:shadowRadius="4"
        android:text="@string/txt_time_30"
        android:textColor="@color/semi_white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/txt_time_inf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="273dp"
        android:layout_marginBottom="345dp"
        android:layout_marginStart="300dp"
        android:layout_marginEnd="35dp"
        android:fontFamily="@font/montserrat_semibold"
        android:shadowColor="@color/hide_black"
        android:shadowDx="1"
        android:shadowDy="6"
        android:shadowRadius="4"
        android:text="@string/txt_time_inf"
        android:textColor="@color/semi_white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/txt_game_easy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="329dp"
        android:layout_marginBottom="289dp"
        android:layout_marginStart="104dp"
        android:layout_marginEnd="192dp"
        android:fontFamily="@font/montserrat_semibold"
        android:shadowColor="@color/hide_black"
        android:shadowDx="1"
        android:shadowDy="6"
        android:shadowRadius="4"
        android:text="@string/txt_game_easy"
        android:textColor="@color/semi_white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/txt_mode_hard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="329dp"
        android:layout_marginBottom="289dp"
        android:layout_marginStart="280dp"
        android:layout_marginEnd="10dp"
        android:fontFamily="@font/montserrat_semibold"
        android:shadowColor="@color/hide_black"
        android:shadowDx="1"
        android:shadowDy="6"
        android:shadowRadius="4"
        android:text="@string/txt_mode_hard"
        android:textColor="@color/semi_white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:id="@+id/btn_blue_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/btn_blue_menu"
        android:layout_marginTop="533dp"
        android:layout_marginBottom="67dp"
        android:layout_marginStart="68dp"
        android:layout_marginEnd="252dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/btn_red_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/btn_red_settings"
        android:layout_marginTop="533dp"
        android:layout_marginBottom="67dp"
        android:layout_marginStart="160dp"
        android:layout_marginEnd="160dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <ImageView
        android:id="@+id/btn_blue_stats"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/btn_blue_stats"
        android:layout_marginTop="533dp"
        android:layout_marginBottom="67dp"
        android:layout_marginStart="252dp"
        android:layout_marginEnd="68dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/create_by_kuznikov"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_by_kuznikov"
        android:textSize="16sp"
        android:letterSpacing="0.1"
        android:textColor="@color/hide_red"
        android:fontFamily="@font/montserrat_bold"
        android:layout_marginTop="700dp"
        android:layout_marginBottom="2dp"
        android:layout_marginStart="86dp"
        android:layout_marginEnd="86dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:shadowDx="0"
        android:shadowDy="4"
        android:shadowRadius="4"
        android:shadowColor="@color/hide_black"/>

</androidx.constraintlayout.widget.ConstraintLayout>