<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/shape_gradient"
    tools:context=".views.StatsFragment">

    <ImageView
        android:id="@+id/img_background_coin"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/img_background_coin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/name_connect_four"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="36sp"
        android:text="@string/title_stats"
        android:letterSpacing="0.1"
        android:textColor="@color/semi_white"
        android:fontFamily="@font/montserrat_bold"
        android:layout_marginTop="84dp"
        android:layout_marginBottom="512dp"
        android:layout_marginStart="68dp"
        android:layout_marginEnd="69dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:shadowDx="0"
        android:shadowDy="4"
        android:shadowRadius="4"
        android:shadowColor="@color/hide_black"/>

    <TextView
        android:id="@+id/txt_mode_one_player"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="400dp"
        android:layout_marginStart="68dp"
        android:layout_marginEnd="69dp"
        android:fontFamily="@font/montserrat_semibold"
        android:shadowColor="@color/hide_black"
        android:shadowDx="1"
        android:shadowDy="6"
        android:shadowRadius="4"
        android:text="@string/txt_mode_one_player"
        android:textColor="@color/semi_white"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/txt_win_stats"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="250dp"
        android:layout_marginBottom="379dp"
        android:fontFamily="@font/montserrat_semibold"
        android:shadowColor="@color/hide_black"
        android:shadowDx="1"
        android:shadowDy="6"
        android:shadowRadius="4"
        android:text="@string/txt_win_stats"
        android:textColor="@color/semi_white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.046"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.506" />

    <TextView
        android:id="@+id/txt_win"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="250dp"
        android:layout_marginBottom="379dp"
        android:fontFamily="@font/montserrat_semibold"
        android:gravity="right"
        android:shadowColor="@color/hide_black"
        android:shadowDx="1"
        android:shadowDy="6"
        android:shadowRadius="4"
        android:text="-"
        android:textColor="@color/semi_white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.962"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.506" />

    <TextView
        android:id="@+id/txt_lose_stats"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="273dp"
        android:layout_marginBottom="345dp"
        android:fontFamily="@font/montserrat_semibold"
        android:shadowColor="@color/hide_black"
        android:shadowDx="1"
        android:shadowDy="6"
        android:shadowRadius="4"
        android:text="@string/txt_lose_stats"
        android:textColor="@color/semi_white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.057"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_lose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="273dp"
        android:layout_marginBottom="345dp"
        android:fontFamily="@font/montserrat_semibold"
        android:gravity="right"
        android:shadowColor="@color/hide_black"
        android:shadowDx="1"
        android:shadowDy="6"
        android:shadowRadius="4"
        android:text="-"
        android:textColor="@color/semi_white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.96"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_win_stats_procs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="300dp"
        android:layout_marginBottom="315dp"
        android:fontFamily="@font/montserrat_semibold"
        android:shadowColor="@color/hide_black"
        android:shadowDx="1"
        android:shadowDy="6"
        android:shadowRadius="4"
        android:text="@string/txt_win_proc"
        android:textColor="@color/semi_white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.065"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.505" />

    <TextView
        android:id="@+id/txt_win_procs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="300dp"
        android:layout_marginBottom="315dp"
        android:fontFamily="@font/montserrat_semibold"
        android:gravity="right"
        android:shadowColor="@color/hide_black"
        android:shadowDx="1"
        android:shadowDy="6"
        android:shadowRadius="4"
        android:text="-"
        android:textColor="@color/semi_white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.96"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.505" />

    <ImageView
        android:id="@+id/btn_blue_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/btn_blue_menu"
        android:layout_marginTop="533dp"
        android:layout_marginBottom="67dp"
        android:layout_marginStart="68dp"
        android:layout_marginEnd="252dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/btn_blue_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/btn_blue_settings"
        android:layout_marginTop="533dp"
        android:layout_marginBottom="67dp"
        android:layout_marginStart="160dp"
        android:layout_marginEnd="160dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <ImageView
        android:id="@+id/btn_red_stats"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/btn_red_stats"
        android:layout_marginTop="533dp"
        android:layout_marginBottom="67dp"
        android:layout_marginStart="252dp"
        android:layout_marginEnd="68dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/create_by_kuznikov"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_by_kuznikov"
        android:textSize="16sp"
        android:letterSpacing="0.1"
        android:textColor="@color/hide_red"
        android:fontFamily="@font/montserrat_bold"
        android:layout_marginTop="700dp"
        android:layout_marginBottom="2dp"
        android:layout_marginStart="86dp"
        android:layout_marginEnd="86dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:shadowDx="0"
        android:shadowDy="4"
        android:shadowRadius="4"
        android:shadowColor="@color/hide_black"/>

</androidx.constraintlayout.widget.ConstraintLayout>